--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="css/hover.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/main.css">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-9379239000959827",
+      enable_page_level_ads: true
+    });
+  </script>
 </head>
 <body>
   <div class="info hvr-grow">
