--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <link rel="stylesheet" href="vendor/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <!-- <script>
+  <script>
     (adsbygoogle = window.adsbygoogle || []).push({
       google_ad_client: "ca-pub-9379239000959827",
       enable_page_level_ads: true
     });
-  </script> -->
+  </script>
 </head>
 <body>
   <div class="sound hvr-grow">
@@ -44,6 +44,28 @@
           <span class="currency-type">BTC</span>
           <span class="currency-price last-price number"></span>
           <span class="currency">MXN</span>
+        </div>
+      </div>
+      <div id="bitcoinCash" class="col-lg-12 currency-container">
+        <i class="fa fa-star fav-star hvr-grow" aria-hidden="true"></i>
+        <div class="col-md-12 col-lg-3 left-data">
+          <div class="col-lg-12 col-xs-4">
+            <span class="side-title">MÁXIMO:</span>
+            <span class="high number3"></span>
+          </div>
+          <div class="col-lg-12 col-xs-4">
+            <span class="side-title">MÍNIMO:</span>
+            <span class="low number3"></span>
+          </div>
+          <div class="col-lg-12 col-xs-4">
+            <span class="side-title">VOLUMEN:</span>
+            <span class="volume number3"></span>
+          </div>
+        </div>
+        <div class="col-md-12 col-lg-9">
+          <span class="currency-type">BCH</span>
+          <span class="currency-price last-price number5"></span>
+          <span class="currency">BTC</span>
         </div>
       </div>
       <div id="ethereum" class="col-lg-12 currency-container">
