--- a/index.html
+++ b/index.html
@@ -1,131 +1,216 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/hover.css">
-  <link rel="stylesheet" href="css/animate.css">
-  <link rel="stylesheet" href="vendor/fakeLoader/fakeLoader.css">
-  <link rel="stylesheet" href="vendor/font-awesome-4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/main.css">
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-9379239000959827",
-      enable_page_level_ads: true
-    });
-  </script>
-</head>
-<body>
-  <div class="sound hvr-grow">
-    <i class="fa fa-volume-up" aria-hidden="true"></i>
-  </div>
-  <div id="fakeloader"></div>
-  <div class="container text-right">
-    <div class="col-lg-12">
-      <div id="bitcoin" class="col-lg-12 currency-container">
-        <i class="fa fa-star fav-star hvr-grow" aria-hidden="true" style="color:#FCBE1F;"></i>
-        <div class="col-md-12 col-lg-3 left-data">
-          <div class="col-lg-12 col-xs-4">
-            <span class="side-title">MÁXIMO:</span>
-            <span class="high number"></span>
-          </div>
-          <div class="col-lg-12 col-xs-4">
-            <span class="side-title">MÍNIMO:</span>
-            <span class="low number"></span>
-          </div>
-          <div class="col-lg-12 col-xs-4">
-            <span class="side-title">VOLUMEN:</span>
-            <span class="volume number"></span>
-          </div>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Cryptocurrencies was made to check the prices of the main cryptocurrencies in the market in a fast and simple way. Made with love especially for you <3">
+
+    <title>Cryptocurrencies</title>
+
+    <link rel="shortcut icon" href="images/fav.ico" />
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/hover.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="vendor/fakeLoader/fakeLoader.css">
+    <link rel="stylesheet" href="vendor/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-9379239000959827",
+        enable_page_level_ads: true
+      });
+    </script>
+  </head>
+  <body>
+    <div id="fakeloader"></div>
+    <nav class="navbar navbar-inverse bg-faded">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#" title="Cryptocurrencies">CC</a>
         </div>
-        <div class="col-md-12 col-lg-9">
-          <span class="currency-type">BTC</span>
-          <span class="currency-price last-price number"></span>
-          <span class="currency">MXN</span>
-        </div>
-      </div>
-      <div id="bitcoinCash" class="col-lg-12 currency-container">
-        <i class="fa fa-star fav-star hvr-grow" aria-hidden="true"></i>
-        <div class="col-md-12 col-lg-3 left-data">
-          <div class="col-lg-12 col-xs-4">
-            <span class="side-title">MÁXIMO:</span>
-            <span class="high number3"></span>
-          </div>
-          <div class="col-lg-12 col-xs-4">
-            <span class="side-title">MÍNIMO:</span>
-            <span class="low number3"></span>
-          </div>
-          <div class="col-lg-12 col-xs-4">
-            <span class="side-title">VOLUMEN:</span>
-            <span class="volume number3"></span>
-          </div>
-        </div>
-        <div class="col-md-12 col-lg-9">
-          <span class="currency-type">BCH</span>
-          <span class="currency-price last-price number5"></span>
-          <span class="currency">BTC</span>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <span class="fav-currency">Loading...</span><span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="#" class="dropdown-fav-btc" currencyName="bitcoin">...</a></li>
+                <li><a href="#" class="dropdown-fav-bch" currencyName="bitcoinCash">...</a></li>
+                <li><a href="#" class="dropdown-fav-eth" currencyName="ethereum">...</a></li>
+                <li><a href="#" class="dropdown-fav-xrp" currencyName="ripple">...</a></li>
+              </ul>
+            </li>
+            <li>
+              <div class="question hvr-grow navbar-right">
+                <a href="#" data-toggle="modal" data-target="#about">
+                  <i class="fa fa-question-circle" aria-hidden="true"></i>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="sound hvr-grow navbar-right">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-volume-up fa-stack-1x"></i>
+                  <i class="fa fa-ban fa-stack-2x text-danger mutedSound"></i>
+                </span>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
-      <div id="ethereum" class="col-lg-12 currency-container">
-        <i class="fa fa-star fav-star hvr-grow" aria-hidden="true"></i>
-        <div class="col-md-12 col-lg-3 left-data">
-          <div class="col-lg-12 col-xs-4">
-            <span class="side-title">MÁXIMO:</span>
-            <span class="high number"></span>
+    </nav>
+    <div class="container text-right">
+      <div class="col-lg-12">
+        <div id="bitcoin" class="col-lg-12 currency-container">
+          <div class="col-md-12 col-lg-3 left-data">
+            <div class="col-lg-12 col-xs-4">
+              <span class="side-title">MÁXIMO:</span>
+              <span class="high number">...</span>
+            </div>
+            <div class="col-lg-12 col-xs-4">
+              <span class="side-title">MÍNIMO:</span>
+              <span class="low number">...</span>
+            </div>
+            <div class="col-lg-12 col-xs-4">
+              <span class="side-title">VOLUMEN:</span>
+              <span class="volume number">...</span>
+            </div>
           </div>
-          <div class="col-lg-12 col-xs-4">
-            <span class="side-title">MÍNIMO:</span>
-            <span class="low number"></span>
-          </div>
-          <div class="col-lg-12 col-xs-4">
-            <span class="side-title">VOLUMEN:</span>
-            <span class="volume number"></span>
-          </div>
-        </div>
-        <div class="col-md-12 col-lg-9">
-          <span class="currency-type">ETH</span>
-          <span class="currency-price last-price number"></span>
-          <span class="currency">MXN</span>
-        </div>
-      </div>
-      <div id="ripple" class="col-lg-12 currency-container">
-        <i class="fa fa-star fav-star hvr-grow" aria-hidden="true"></i>
-        <div class="col-md-12 col-lg-3 left-data">
-          <div class="col-lg-12 col-xs-4">
-            <span class="side-title">MÁXIMO:</span>
-            <span class="high number"></span>
-          </div>
-          <div class="col-lg-12 col-xs-4">
-            <span class="side-title">MÍNIMO:</span>
-            <span class="low number"></span>
-          </div>
-          <div class="col-lg-12 col-xs-4">
-            <span class="side-title">VOLUMEN:</span>
-            <span class="volume number"></span>
+          <div class="col-md-12 col-lg-9">
+            <span class="currency-type">BTC</span>
+            <span class="currency-price last-price number">...</span>
+            <span class="currency">MXN</span>
           </div>
         </div>
-        <div class="col-md-12 col-lg-9">
-          <span class="currency-type">XRP</span>
-          <span class="currency-price last-price number"></span>
-          <span class="currency">MXN</span>
+        <div id="bitcoinCash" class="col-lg-12 currency-container">
+          <div class="col-md-12 col-lg-3 left-data">
+            <div class="col-lg-12 col-xs-4">
+              <span class="side-title">MÁXIMO:</span>
+              <span class="high btc-content number3">...</span>
+            </div>
+            <div class="col-lg-12 col-xs-4">
+              <span class="side-title">MÍNIMO:</span>
+              <span class="low btc-content number3">...</span>
+            </div>
+            <div class="col-lg-12 col-xs-4">
+              <span class="side-title">VOLUMEN:</span>
+              <span class="volume number3">...</span>
+            </div>
+          </div>
+          <div class="col-md-12 col-lg-9">
+            <span class="currency-type">BCH</span>
+            <span class="currency-price last-price number5">...</span>
+            <span class="currency">BTC</span>
+          </div>
+        </div>
+        <div id="ethereum" class="col-lg-12 currency-container">
+          <div class="col-md-12 col-lg-3 left-data">
+            <div class="col-lg-12 col-xs-4">
+              <span class="side-title">MÁXIMO:</span>
+              <span class="high number">...</span>
+            </div>
+            <div class="col-lg-12 col-xs-4">
+              <span class="side-title">MÍNIMO:</span>
+              <span class="low number">...</span>
+            </div>
+            <div class="col-lg-12 col-xs-4">
+              <span class="side-title">VOLUMEN:</span>
+              <span class="volume number">...</span>
+            </div>
+          </div>
+          <div class="col-md-12 col-lg-9">
+            <span class="currency-type">ETH</span>
+            <span class="currency-price last-price number">...</span>
+            <span class="currency">MXN</span>
+          </div>
+        </div>
+        <div id="ripple" class="col-lg-12 currency-container">
+          <div class="col-md-12 col-lg-3 left-data">
+            <div class="col-lg-12 col-xs-4">
+              <span class="side-title">MÁXIMO:</span>
+              <span class="high number">...</span>
+            </div>
+            <div class="col-lg-12 col-xs-4">
+              <span class="side-title">MÍNIMO:</span>
+              <span class="low number">...</span>
+            </div>
+            <div class="col-lg-12 col-xs-4">
+              <span class="side-title">VOLUMEN:</span>
+              <span class="volume number">...</span>
+            </div>
+          </div>
+          <div class="col-md-12 col-lg-9">
+            <span class="currency-type">XRP</span>
+            <span class="currency-price last-price number">...</span>
+            <span class="currency">MXN</span>
+          </div>
         </div>
       </div>
     </div>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-53850008-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-  <script src="js/jquery-2.2.3.min.js" charset="utf-8"></script>
-  <script src="js/bootstrap.min.js" charset="utf-8"></script>
-  <script src="js/number.min.js" charset="utf-8"></script>
-  <script src="vendor/fakeLoader/fakeLoader.min.js" charset="utf-8"></script>
-  <script src="js/main.js" charset="utf-8"></script>
-</body>
+    <div class="modal fade bd-example-modal-lg" id="about" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header text-center">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" style="font-size:2em;">CryptoCurrencies</h4>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-lg-12 lead text-center">
+                <p>Cryptocurrencies was made to check the prices of the main cryptocurrencies in the market in a fast and simple way.</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="text-center">
+                <a href="https://bitso.com/?ref=l3cq4lmvrv6d58736q0q3ddr" target="_blank">
+                  <div class="col-lg-6">
+                    <img src="images/bitso.svg" class="bitso-logo" alt="Bitso Logo">
+                  </div>
+                </a>
+                <div class="col-lg-6 margin-t-20">
+                  <a href="https://bitso.com/?ref=l3cq4lmvrv6d58736q0q3ddr" target="_blank">
+                    <button type="button" class="btn btn-lg btn-default buy-button hvr-grow">Buy Cryptocurrencies</button>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-12 margin-t-20">
+                <h3>Donate</h3>
+                <p><b>bitcoin:</b> 3Eqsbbk9U6kcTbhinkNmxMrsaZ9aNtionj</p>
+                <p><b>etherum:</b> 0xe1266889d6ee018c08903a43985210b325a6c911</p>
+                <p><b>ripple:</b> rHZaDC6tsGN2JWGeXhjKL6664RNCq5hu4B 'Destination Tag' : 23850871</p>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <p>Made with love especially for you <i class="fa fa-heart hvr-pulse" aria-hidden="true"></i></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-53850008-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <script src="js/jquery-2.2.3.min.js" charset="utf-8"></script>
+    <script src="js/bootstrap.min.js" charset="utf-8"></script>
+    <script src="js/number.min.js" charset="utf-8"></script>
+    <script src="vendor/fakeLoader/fakeLoader.min.js" charset="utf-8"></script>
+    <script src="vendor/typeit/typeit.min.js" charset="utf-8"></script>
+    <script src="js/main.js" charset="utf-8"></script>
+  </body>
 </html>
